[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securelock"
version = "1.0.0"
authors = [
    { name = "Umit Tasdelen", email = "umittadelen1277@gmail.com" }
]
description = "A simple library for secure text encryption and decryption using salted password-based encryption."
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = ["encryption", "decryption", "security", "password-protection"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography"
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/umittadelen/securelock"
"Documentation" = "https://github.com/umittadelen/securelock#readme"
"Bug Tracker" = "https://github.com/umittadelen/securelock/issues"